--- a/src/pkg_beien_paint_msgs/CMakeLists.txt
+++ b/src/pkg_beien_paint_msgs/CMakeLists.txt
@@ -14,6 +14,8 @@ find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Test.msg"
+  "msg/JoyconLeft.msg"
+  "msg/JoyconRight.msg"
 )
 
 if(BUILD_TESTING)
