--- a/src/pkg_joystick_cpp/CMakeLists.txt
+++ b/src/pkg_joystick_cpp/CMakeLists.txt
@@ -11,9 +11,16 @@ find_package(rclcpp REQUIRED)
 find_package(pkg_beien_paint_msgs REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(PkgConfig REQUIRED)
 
-add_executable(joycon_left_pub src/joycon_left_pub.cpp)
+pkg_check_modules(HIDAPI REQUIRED hidapi-hidraw)
+
+add_executable(joycon_left_pub 
+  src/pkg_joystick_cpp/joycon_left_node.cpp
+  src/joycon_left_pub.cpp
+)
 target_include_directories(joycon_left_pub PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/pkg_joystick_cpp>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
 target_compile_features(joycon_left_pub PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
@@ -25,8 +32,20 @@ ament_target_dependencies(
   "std_msgs"
 )
 
+target_link_libraries(joycon_left_pub ${HIDAPI_LIBRARIES})
+
 install(TARGETS joycon_left_pub
   DESTINATION lib/${PROJECT_NAME})
+
+# 安装 launch 文件
+install(DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+# 安装参数文件
+install(DIRECTORY config
+  DESTINATION share/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
