添加键盘控制节点、手柄控制节点、beien_paint控制节点，并进行模拟测试

--- a/src/pkg_beien_paint_msgs/CMakeLists.txt
+++ b/src/pkg_beien_paint_msgs/CMakeLists.txt
@@ -11,11 +11,15 @@ find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
+find_package(builtin_interfaces REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Test.msg"
   "msg/JoyconLeft.msg"
   "msg/JoyconRight.msg"
+  "msg/CarInfo.msg"
+  "msg/PlcCommand.msg"
+  DEPENDENCIES std_msgs builtin_interfaces
 )
 
 if(BUILD_TESTING)
