--- a/src/beien_paint_bringup/CMakeLists.txt
+++ b/src/beien_paint_bringup/CMakeLists.txt
@@ -9,6 +9,10 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(pkg_plc_communicate_cpp REQUIRED)
 
+install(DIRECTORY launch
+        DESTINATION share/${PROJECT_NAME}/
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
