--- a/src/pkg_keyboard_control_cpp/package.xml
+++ b/src/pkg_keyboard_control_cpp/package.xml
@@ -1,24 +1,16 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>pkg_beien_paint_msgs</name>
+  <name>pkg_keyboard_control_cpp</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="beien@todo.todo">beien</maintainer>
+  <maintainer email="2013888975@qq.com">wst</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>std_msgs</depend>
-  <depend>rclcpp_action</depend>
-  <depend>action_msgs</depend>
-  <depend>builtin_interfaces</depend>
-
-  <build_depend>rosidl_default_generators</build_depend>
-  <exec_depend>rosidl_default_runtime</exec_depend>
-  <member_of_group>rosidl_interface_packages</member_of_group>
+  <depend>pkg_beien_paint_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
