--- a/src/pkg_plc_communicate_cpp/config/plc_params.yaml
+++ b/src/pkg_plc_communicate_cpp/config/plc_params.yaml
@@ -1,12 +1,13 @@
 plc:
   plc_communicate:
     ros__parameters:
-      plc_ip: "192.168.31.106"
+      # plc_ip: "192.168.31.106"
+      plc_ip: "192.168.100.5"
       plc_port: 502
       read_interval: 200
       reconnect_interval: 2000
       read_holding_register_start_address: 0
-      read_holding_register_num: 20
+      read_holding_register_num: 50
       write_holding_register_start_address: 0
-      write_holding_register_num: 20
+      write_holding_register_num: 50
       response_timeout: 1
